fix contrast error

--- a/index.css
+++ b/index.css
@@ -99,7 +99,7 @@ a:hover {
 .heroimage {
     width: 100%;
     height: auto;
-    filter: brightness(10%);
+    filter: brightness(50%);
 }
 .hero-action {
     display: flex;
@@ -115,8 +115,9 @@ a:hover {
     }
 }
 h1 {
-    font-weight: 800;
+    font-weight: 700;
     font-size: xx-large;
+    color: #ffffff;
 }
 @media only screen and (max-width: 700px) {
     h1 {
@@ -170,9 +171,6 @@ h2 {
 @media only screen and (max-width: 700px) {
     h2 {
         font-size: 22px;
-        font-weight: 700;
-        grid-column: 1 / span 1;
-        grid-row: 1 / span 1;
    }
 }
 .feature-1 {
